...
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iie-fp-IFo" userLabel="Search View Container">
                    <rect key="frame" x="16" y="60" width="382" height="44"/>
                    <subviews>
                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1gZ-St-yT4">
                            <rect key="frame" x="0.0" y="0.0" width="382" height="44"/>
                            <subviews>
                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DNU-1B-egP" userLabel="Search Text Field">
                                    <rect key="frame" x="0.0" y="0.0" width="282" height="44"/>
                                    <nil key="textColor"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                    <textInputTraits key="textInputTraits" keyboardType="webSearch" returnKeyType="search" enablesReturnKeyAutomatically="YES" textContentType="name"/>
                                </textField>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xRd-xz-9EX" userLabel="Cancel Button">
...
