...
                <constraint firstItem="ze9-qa-qp0" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="1:2" id="mKY-j1-PuQ"/>
                <constraint firstItem="ze9-qa-qp0" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="qYS-Zl-wi7"/>
                <constraint firstItem="ze9-qa-qp0" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="rRK-TY-ptF"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <userDefinedRuntimeAttributes>
                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="DetailRepositoryScreen"/>
            </userDefinedRuntimeAttributes>
            <point key="canvasLocation" x="136.80000000000001" y="91.304347826086968"/>
        </view>
    </objects>
</document>

